<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_date_label">Date of crime.</string>
    <string name="call_police_label">Call police!</string>
    <string name="button_to_start_label">To start!</string>
    <string name="button_to_end_label">To end!</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New crime</string>
    <string name="delete_crime">Delete crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="greetings_label">Its too empty, lets fill it!</string>
    <string name="greeting_button_label">Add crimes, muahaha.</string>
    <string name="choose_suspect_label">Chose suspect.</string>
    <string name="send_crime_report">Send crime report.</string>
    <string name="call_to_suspect">Call to suspect!</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">
Crime scene photo (not set)
</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>

    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

</resources>
